@@ -2,6 +2,12 @@
 VERSION 0.8.1cvs
 ================
 
+2006-10-02  Vincent Richard  <vincent@vincent-richard.net>
+
+ * word, wordEncoder: fixed bug #1096610 which caused encoding of a
+   non-integral number of characters (and then, generation of
+   incorrectly-formed words) with multi-bytes charsets.
+
 2006-07-13  Vincent Richard  <vincent@vincent-richard.net>
 
  * Fixed bugs in MHTML code: 'CID' prefix should not be case-sensitive;
